# Agentic-RAG-Cookbook

./: .gitignore  01a_Create_Text_Files.py  01a_Embedding_Check.py  01b_Embedding_Check.py  01b_PublicSources_Data.py  01c_PublicSources_Data.py  02a_ChromaDB_VectorStore.py  02b_ChromaDB_RAGChain.py  02c_ChromaDB_LCEL_NewDoc.py  02d_ChromaDB_ConverseMemory.py  03a_FAISS_BuildStore.py  03b_FAISS_SimilaritySearch.py  03c_FAISS_RAG_Groq_Doc.py  03d_FAISS_BuildStore_TextFile.py  03e_FAISS_RAG_Groq_Text.py  03e_FAISS_RAG_Groq_TextFile.py  04a_Neo4jDB.py  04b_Neo4jDB.py  04f_Neo4jDB.py  05_InMemoryVectorStore_Sample.py  05_InMemory_VectorStore.py  06_AstraDB_Sample.py  06_AstraDB_VectorStore.py  07_PineconeDB_Sample.py  07_PineconeDB_VectorStore.py  08a_RAG_CustomChunker.py  08b_RAG_CustomChunker.py  08b_RAG_NativeChunker.py  08d_RAG_NativeChunker.py  09_Dense_Sparse.py  09_DensesParse.py  10_ReRanking.py  10a_ReRanking.py  10b_ReRanking.py  11_MMR.py  12_QueryExpansion.py  13_QueryDecomposition.py  14a_HyDE_Manual_BetterOP.py  14b_HyDE_Embed_Web.py  14c_HyDE_Embed_Custom.py  (+60 more)
23_Debugging_OpenAI/: Debugging_OpenAI.py  langgraph.json  pyproject.toml  run_it.sh
38_Complete_RAG_Project/: ReactJS_Prompt.md
39_FrontEnd/: README.md  ReactJSReadmMe.md  main.py  pyproject.toml  requirements.txt
chroma_db/: chroma.sqlite3
cybersecurity_data/: cybersecurity_concepts.txt  doc_0.txt  doc_1.txt  doc_2.txt  private_docs.txt  private_docs2.txt  public_docs.txt
data/: doc_0.txt  doc_1.txt  doc_10.txt  doc_11.txt  doc_12.txt  doc_2.txt  doc_3.txt  doc_4.txt  doc_5.txt  doc_6.txt  (+3 more)
(+9 files in other folders)
