[project]
name = "agentic-rag-cookbook"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arxiv>=4.0.0",
    "ddgs>=9.14.4",
    "faiss-cpu>=1.14.3",
    "google-api-python-client>=2.197.0",
    "langchain>=1.2.15",
    "langchain-anthropic>=1.4.7",
    "langchain-astradb>=1.0.0",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.26",
    "langchain-experimental>=0.4.1",
    "langchain-google-community>=3.0.5",
    "langchain-google-genai>=4.2.1",
    "langchain-groq>=1.1.2",
    "langchain-huggingface>=1.2.1",
    "langchain-neo4j>=0.10.0",
    "langchain-openai>=1.1.12",
    "langchain-pinecone>=0.2.13",
    "langchain-tavily>=0.2.17",
    "langchain-text-splitters>=1.1.1",
    "langchainhub>=0.1.21",
    "langgraph>=1.1.6",
    "langgraph-api[inmem]>=0.10.0",
    "langgraph-cli[inmem]>=0.4.30",
    "neo4j>=6.2.0",
    "pillow>=12.2.0",
    "pinecone>=7.3.0",
    "pymupdf>=1.27.2.2",
    "python-dotenv>=1.2.2",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=5.3.0",
    "stackapi>=0.3.1",
    "tavily-python>=0.7.23",
    "wikipedia>=1.4.0",
    "wolframalpha>=5.1.3",
]
